Rationalize JRuby/Rails system properties and environment
- Remove the JRuby optimization flags, which add complexity and have limited benefit now
- Reduce references to the project extension arguments