@@ -86,10 +86,10 @@ def createJRubyBinstubs = tasks.register('createJRubyBinstubs') {
   def outputScriptFile = file("${outputDir}/jruby${ext}")
   def templateProperties = [
     mainClassName       : 'org.jruby.Main',
-    jvmArgs             : project.jrubyOptimizationJvmArgs,
-    systemProperties    : (project.jrubyOptimizationSystemProperties + project.jrubyDefaultSystemProperties),
+    jvmArgs             : JRuby.jrubyJvmArgs,
+    systemProperties    : JRuby.jrubySystemProperties,
     classpath           : [railsPathingJarMain.map { Jar jt -> jt.archiveFile }.get().asFile],
-    environment         : project.defaultJRubyEnvironment,
+    environment         : project.jrubyEnvironment,
     additionalJRubyPaths: project.additionalJRubyPaths,
     javaExecutable      : Jvm.current().getExecutable("java")
   ]
@@ -236,12 +236,6 @@ def compileAssetsRailsTest = tasks.register('compileAssetsRailsTest', ExecuteUnd
     'RAILS_GROUPS': 'assets',
   ]
 
-  // Native-subprocess control is needed for usage of Dart Sass via sass-embedded
-  jvmArgs += [
-    '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
-    '--add-opens=java.base/java.io=ALL-UNNAMED'
-  ]
-
   args = ['-S', 'rake', '--trace', 'assets:clobber', 'assets:precompile']
 
   doFirst {
@@ -265,18 +259,10 @@ tasks.register('compileAssetsRailsProd', ExecuteUnderRailsTask) {
 
   outputs.dir(outputAssetsDir)
 
-  disableJRubyOptimization = true
-
   environment(
     'RAILS_ENV': 'production',
     'RAILS_GROUPS': 'assets',
   )
-
-  // Native-subprocess control is needed for usage of Dart Sass via sass-embedded
-  jvmArgs += [
-    '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
-    '--add-opens=java.base/java.io=ALL-UNNAMED'
-  ]
 
   args = ['-S', 'rake', '--trace', 'assets:clobber', 'assets:precompile']
 
@@ -331,28 +317,44 @@ tasks.register('compileAssets') {
 
 tasks.register('rspec', ExecuteUnderRailsTask) {
   dependsOn ':server:cleanDb', compileAssetsRailsTest, railsPathingJarTest
-  pathingJar.set(railsPathingJarTest.flatMap { it.archiveFile } as Provider<RegularFile>)
-  mustRunAfter compileAssets, compileAssetsWebpackDev, generateJSRoutes
-  inputs.files("${project.railsRoot}/app")
-  inputs.files("${project.railsRoot}/config")
-  inputs.files("${project.railsRoot}/lib")
-  inputs.files("${project.railsRoot}/spec")
-  inputs.files(compileAssetsRailsTest.map { it.outputs.files })
-
   description = "Run specs (pass '-Popts=...' to pass options)"
 
-  disableJRubyOptimization = true
+  pathingJar.set(railsPathingJarTest.flatMap { it.archiveFile } as Provider<RegularFile>)
 
+  def root = project.railsRoot
+  inputs.files(project.bundledGemDir)
+  inputs.files("${root}/app")
+  inputs.files("${root}/config")
+  inputs.files("${root}/lib")
+  inputs.files("${root}/spec")
+  inputs.files(compileAssetsRailsTest.map { it.outputs.files })
+
+  maxHeapSize = '256m'
+  jvmArgs += InstallerType.server.jvmModuleOpensArgs
+  args = ['-S', 'rspec', '--backtrace']
+  if (project.hasProperty('opts')) {
+    args += Commandline.translateCommandline(project.property('opts') as String)
+  }
   environment += [
     'REPORTS_DIR': "${layout.buildDirectory.get()}/rspec-results"
   ]
 
-  jvmArgs += InstallerType.server.jvmModuleOpensArgs
-  args = ['-S', 'rspec', '--backtrace']
-  maxHeapSize = '256m'
+  def testDataDir = layout.buildDirectory.dir('railsTests')
+  def testConfigDir = testDataDir.map { it.dir('config') }
+  systemProperties += [
+    'cruise.config.dir'             : testConfigDir.get().asFile,
+    'plugins.all.zip.path'          : testDataDir.map { it.file('plugins.zip') }.get().asFile,
+    'rails.use.compressed.js'       : false,
+    'go.enforce.server.immutability': 'N',
+  ]
 
-  if (project.hasProperty('opts')) {
-    args += Commandline.translateCommandline(project.property('opts') as String)
+  def injected = project.objects.newInstance(Injected)
+  doFirst {
+    injected.fileOps.delete {  delete(testDataDir) }
+    injected.fileOps.copy {
+      from 'config'
+      into testConfigDir
+    }
   }
 }
 
